--- a/styles.css
+++ b/styles.css
@@ -34,7 +34,7 @@ TODO: (post-MVP) Make box-shadows themeable - could add custom shadow color vari
     --bg-glow-outer: #2a0515;
     --bg-glow-edge: #0a0008;
     
-    --candle-color: #5c1a1a;
+    --candle-color: #340e0e;
     
     --flame-center: #ff9999;
     --flame-inner: #ff6699;
@@ -267,5 +267,95 @@ the larger the number, the farther from the left edge */
     height: 40px;
     background-color: var(--skull-holes);
     clip-path: polygon(50% 0%, 100% 100%, 0% 100%);
+}
+
+.moon {
+    position: absolute;
+    top: 50px;
+    left: 100px;
+    width: 120px;
+    height: 120px;
+    background: radial-gradient(circle at 40% 40%, 
+        #e0e0e0 0%, 
+        #b0b0b0 40%, 
+        #808080 100%);
+    border-radius: 50%;
+    opacity: 0;
+    transition: opacity 500ms;
+}
+
+[data-theme="blood-moon"] .moon {
+    opacity: 1;
+}
+
+.party-hat {
+    position: absolute;
+    top: 310px;
+    left: 380px;
+    width: 0;
+    height: 0;
+    border-left: 40px solid transparent;
+    border-right: 40px solid transparent;
+    border-bottom: 80px solid #ff6347;
+    opacity: 0;
+    transition: opacity 500ms;
+}
+
+[data-theme="birthday"] .party-hat {
+    opacity: 1;
+}
+
+.confetti {
+    position: absolute;
+    width: 10px;
+    height: 15px;
+    opacity: 0;
+    transition: opacity 500ms;
+}
+
+[data-theme="birthday"] .confetti {
+    opacity: 1;
+}
+
+.confetti-1 {
+    top: 100px;
+    left: 200px;
+    background-color: #ff6347;
+    transform: rotate(25deg);
+}
+
+.confetti-2 {
+    top: 150px;
+    left: 550px;
+    background-color: #FFD700;
+    transform: rotate(-15deg);
+}
+
+.confetti-3 {
+    top: 250px;
+    left: 150px;
+    background-color: #87CEEB;
+    transform: rotate(45deg);
+}
+
+.confetti-4 {
+    top: 300px;
+    left: 600px;
+    background-color: #ff66cc;
+    transform: rotate(-30deg);
+}
+
+.confetti-5 {
+    top: 450px;
+    left: 180px;
+    background-color: #FFD700;
+    transform: rotate(60deg);
+}
+
+.confetti-6 {
+    top: 500px;
+    left: 580px;
+    background-color: #ff6347;
+    transform: rotate(-45deg);
 }
 
